# itsamonster

./: CMakeLists.txt  CODESTYLE.md  README.md  TODO.md
src/: Action.cpp  Action.hpp  Battlefield.cpp  Battlefield.hpp  Dice.cpp  Dice.hpp  Logger.cpp  Logger.hpp  Match.cpp  Match.hpp  Monster.cpp  Monster.hpp  Types.hpp  Yochlol.hpp  YoungGoldDragon.hpp  itsamonster.cpp
src/actions/: Action.cpp  Action.hpp  AttackAction.cpp  AttackAction.hpp  RechargeAction.cpp  RechargeAction.hpp
src/core/: AI.cpp  AI.hpp  Battlefield.cpp  Battlefield.hpp  CombatSystem.cpp  CombatSystem.hpp  Dice.cpp
src/monsters/: AcidFiend.hpp  AwakenedPlants.hpp  Larvae.hpp  Monster.cpp  Monster.hpp  Yochlol.hpp  YoungGoldDragon.hpp
src/reactions/: Reaction.cpp  Reaction.hpp
tests/: AdvantageTests.cpp  AttackActionTests.cpp  AttackAdvantageConditionsTests.cpp  CMakeLists.txt  LarvaeTests.cpp  OpportunityAttackTests.cpp
tests/test_utils/: MockDice.hpp
